2007-05-28  Michael Natterer  <mitch@gimp.org>

	* app/base/tile-manager.c (tile_manager_get): allocate
	tile->rowhint using tile_sanitize_rowhints() (which uses GSlice)
	instead of g_memdup(). Fixes bug #441878.

2007-05-28  Michael Natterer  <mitch@gimp.org>

	Don't leave the user without progress bar just because the
	display's statusbar is invisible:

	* app/display/gimpstatusbar.[ch]: if the statusbar is invisible
	when a progress wants to be shown, temporarily show it, recording
	the fact in the new boolean "progress_shown" member. Added new API
	gimp_statusbar_get/set_visible() which is aware of the new
	temporary visibility state.

	* app/display/gimpdisplayshell-appearance.c
	(gimp_display_shell_set_show_statusbar)
	* app/display/gimpdisplayshell-progress.c
	(gimp_display_shell_progress_message): use the new API instead of
	showing/hiding the widget directly.

2007-05-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfgbgview.[ch]: derive from GtkWidget instead of
	GtkDrawingArea so we save a GdkWindow and render on the correct
	background color also for inactive notebook tabs.

2007-05-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer-floating-sel.c (floating_sel_attach): set
	"Lock Alpha" to TRUE again on floating selections.

	(floating_sel_to_layer): instead, set it to FALSE when turning
	it into a new layer. Fixes bug #418215 and keeps #161042 closed.

2007-05-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: clamping at 255 is good enough.

2007-05-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: clamp to [0;255]. Fixes bug #441681.

2007-05-27  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.18.

2007-05-27  Sven Neumann  <sven@gimp.org>

	* Made 2.3.17 development release.

2007-05-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-utils.[ch] (gimp_container_get_neighbor_of_active):
	new utility function which returns the neighbor of a container's
	active item.
